# cpp-speach-extension

./: CMakeLists.txt  main.cpp
